...
            print("OK button is clicked!")
            self.presenter.resetQuestionIndex()
            self.presenter.quizResults.totalAnswers = 0
            self.presenter.quizResults.correctAnswers = 0
            self.presenter.restartGame()
        }) else { return }
        alert.view.accessibilityIdentifier = "Game results"
        // показываем всплывающее окно
        self.present(alert, animated: true, completion: nil)
    }

    func showAnswerResult(isCorrect: Bool) {
        yesButton.isEnabled = false
...
